.provarCaches/00D6C0000000xA6UAI/objects/redwing__LMS_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used by the LMS Core app</description>
    <fields>
        <fullName>AARPI_Records_Processing_Interval__c</fullName>
        <label>AARPI Records Processing Interval</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Activity__c</fullName>
        <label>Additional Information Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Plan__c</fullName>
        <label>Additional Information Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Trac__c</fullName>
        <label>Additional Information Trac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Achievement_Assignment_trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Achievement Assignment trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_ILTInstructorTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable ILTInstructorTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_RCAchievementAssignment_trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable RCAchievement Assignment trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Sync_Roster_With_LA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_Sync_Roster_With_LA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Task_To_Approve_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Task To Approve Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disabled_Triggers__c</fullName>
        <label>Disabled_Triggers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Double_Book_ILT_Instructors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Book ILT Instructors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Book_ILT_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Book ILT Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notifications_Setting__c</fullName>
        <description>All ILT notifications off - all email notifications will be turned off
ICS invites off - all emails will be send out without ICS files
ICS at a Class level - emails will be send out at an ILT Class level with ICS files
ICS at a Session level - emails will be send out at an ILT Session level with ICS files</description>
        <label>Email Notifications Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Achievement_Types_in_Prerequisites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Achievement Types in Prerequisites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Learning_Plan_ILT_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Learning Plan ILT Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Achievement_Print_URL__c</fullName>
        <inlineHelpText>VF page url (e.g. /apex/PrintCertificate) to be used for printing Achievements</inlineHelpText>
        <label>Achievement Print URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__All_ILT_Classes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, users must attend all classes of an event to get completion credit</inlineHelpText>
        <label>All ILT Classes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Back_to_SF_URL__c</fullName>
        <description>URL used by the back to SF button</description>
        <inlineHelpText>Must be a relative url path (e.g. /home/home.jsp)</inlineHelpText>
        <label>Back to SF URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Check_Session_Registration_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Session Registration Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Checkout_Plugin__c</fullName>
        <inlineHelpText>Name of the checkout plugin used by the LMS</inlineHelpText>
        <label>Checkout Plugin</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Communities_Page_URL__c</fullName>
        <inlineHelpText>URL for the learning page in your Community (e.g. /s/learning)</inlineHelpText>
        <label>Communities Page URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Community_Custom_Domain__c</fullName>
        <inlineHelpText>Custom Domain to be used when building community URLs</inlineHelpText>
        <label>Community Custom Domain</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Company_Logo__c</fullName>
        <description>URL for your company logo</description>
        <inlineHelpText>URL for your company logo</inlineHelpText>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Copy_ILT_Event_Data_To_Classes__c</fullName>
        <label>Copy ILT Event Data to Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Leader_Board_Report__c</fullName>
        <description>Name of a custom report used for displaying leaderboard results</description>
        <inlineHelpText>Name of a custom report used for displaying leaderboard results</inlineHelpText>
        <label>Custom Leader Board Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Logout_URL__c</fullName>
        <description>URL used by the logout button</description>
        <inlineHelpText>Custom Logout link used in the app header (e.g. /secur/logout.jsp)</inlineHelpText>
        <label>Custom Logout URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Section_Name__c</fullName>
        <description>Name of a custom section displayed in the header</description>
        <inlineHelpText>Name of a custom section displayed in the header</inlineHelpText>
        <label>Custom Section Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Section_URL__c</fullName>
        <description>URL path for your custom page</description>
        <inlineHelpText>URL for your custom page (e.g. https://instance.salesforce.com/apex/myhomepage)</inlineHelpText>
        <label>Custom Section URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Default_Sync_Progress_Across_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Sync Progress Across Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Assignments_Version_Backup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to disable assignments backup when new versions are published</inlineHelpText>
        <label>Disable Assignments Version Backup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Async_Permission_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to avoid running permission rules in async mode</inlineHelpText>
        <label>Disable Async Permission Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Correct_Response_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to disable setting the correct response checkbox on every response</inlineHelpText>
        <label>Disable Correct Response Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Feed_Item_Audit_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to disable setting the created by id for achievement feed items</inlineHelpText>
        <label>Disable Audit Fields for Feed Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Future_Progress_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to force Learning Plan progress calculation in a single transaction</inlineHelpText>
        <label>Disable Future Progress Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Leaderboard_Refresh_On_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like disable leaderboard cache refresh on page load</inlineHelpText>
        <label>Disable Leaderboard Refresh On Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Leaderboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like disable the homepage leaderboard</inlineHelpText>
        <label>Disable Leaderboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Learning_Preview_Redirection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to disable the automatic learning redirection when previewing learning content</inlineHelpText>
        <label>Disable Learning Preview Redirection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Track_Achievements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to prevent automatic achievement assignment for track achievements</inlineHelpText>
        <label>Disable Track Achievements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Track_Progress_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to disable progress calculation for Learning Trac Assignments</inlineHelpText>
        <label>Disable Track Progress Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Tracks_Progress_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to disable progress calculation for Tracs in My Learning page</inlineHelpText>
        <label>Disable Tracs Progress Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_User_Certification_Uploads__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to prevent users from uploading certifications</inlineHelpText>
        <label>Disable User Certification Uploads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to disable the LMS user trigger</inlineHelpText>
        <label>Disable User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Learning_Auto_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Learning Auto-Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Learning_Object_Prereqs_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Learning Object Prereqs Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Learning_Object_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to share learning objects with users</inlineHelpText>
        <label>Enable Learning Object Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Learning_Plan_Prereqs_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Learning Plan Prereqs Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Learning_Plans_Withdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Learning Plans Withdrawal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Multi_Lang_Learning_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Multi-Lang Learning Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Plan_Custom_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to enable custom components in Learning Plans</inlineHelpText>
        <label>Enable Plan Custom Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Previous_Version_Shared_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to allow shared assignments learnings to be updated to previous versions</inlineHelpText>
        <label>Enable Previous Version Shared Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Private_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to make uploaded Task Attachments private</inlineHelpText>
        <label>Enable Private Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Zoom_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Zoom Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_iOS_Tap_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;re experiencing issues with taps in Salesforce1 + iOS8</inlineHelpText>
        <label>Enable iOS Tap Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Google_Maps_API_Key__c</fullName>
        <description>URL path for your custom page</description>
        <inlineHelpText>Replace this value with your custom Google Maps API Key (https://console.developers.google.com)</inlineHelpText>
        <label>Google Maps API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Header_Background_Color__c</fullName>
        <description>HEX value for the header background color. (e.g. #EEEEEE)</description>
        <inlineHelpText>HEX value for the header background color. (e.g. #EEEEEE)</inlineHelpText>
        <label>Header Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Header_Text_Color__c</fullName>
        <description>HEX value for the header text color. (e.g. #EEEEEE)</description>
        <inlineHelpText>HEX value for the header text color. (e.g. #EEEEEE)</inlineHelpText>
        <label>Header Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Header_Text_Hover_Color__c</fullName>
        <description>HEX value for the header text hover color. (e.g. #EEEEEE)</description>
        <inlineHelpText>HEX value for the header text hover color. (e.g. #EEEEEE)</inlineHelpText>
        <label>Header Text Hover Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Back_to_SF_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you&apos;d like to hide back to SF button when the SF header is disabled</inlineHelpText>
        <label>Hide Back to SF Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Certifications_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide the certifications section in the achievements page</inlineHelpText>
        <label>Hide Certifications Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Community_Salesforce_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to always hide the Salesforce headers in Communities and Portals</inlineHelpText>
        <label>Hide Salesforce Header in Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Company_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide the header company logo</inlineHelpText>
        <label>Hide Company Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Published_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide publish content from the Learning Publish page</inlineHelpText>
        <label>Hide Published Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Tracks_from_My_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide Learning Tracs from My Learning</inlineHelpText>
        <label>Hide Tracs from My Learning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Training_Catalog_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide entry points to the training catalog</inlineHelpText>
        <label>Hide Training Catalog Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Training_Plans_Progress_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide Learning Plan progress info in the My Learning page</inlineHelpText>
        <label>Hide Learning Plans Progress Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Training_Tracks_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide entry points to Learning Tracs</inlineHelpText>
        <label>Hide Learning Tracs Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_User_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide the user menu from the app header</inlineHelpText>
        <label>Hide User Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Class_Base_URL__c</fullName>
        <inlineHelpText>Absolute URL for the ILT Class page in your Community</inlineHelpText>
        <label>ILT Class Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Rosters_Default_Account_Object_Id__c</fullName>
        <label>ILT Rosters Default Account Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Rosters_Default_Profile_Object_Id__c</fullName>
        <label>ILT Rosters Default Profile Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Cloudforce_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if your org runs in a cloudforce.com domain</inlineHelpText>
        <label>Is Cloudforce Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Activity_LEX_Page__c</fullName>
        <label>Learning Activity LEX Page</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Object_Filter_Field_Set_Name__c</fullName>
        <inlineHelpText>Field Set on User object to add new fields to Manage Assignments page for Learning Objects</inlineHelpText>
        <label>Learning Object Filter Field Set Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Plan_Filter_Field_Set_Name__c</fullName>
        <inlineHelpText>Field Set on User object to add new fields to Manage Assignments page for Learning Plans</inlineHelpText>
        <label>Learning Plan Filter Field Set Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Plan_LEX_Page__c</fullName>
        <label>Learning Plan LEX Page</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Trac_Filter_Field_Set_Name__c</fullName>
        <inlineHelpText>Field Set on User object to add new fields to Manage Assignments page for Learning Tracs</inlineHelpText>
        <label>Learning Trac Filter Field Set Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__MA_User_Information_Field_Set_Name__c</fullName>
        <label>MA User Information Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Media_Item_Builder_Field_Set_Name__c</fullName>
        <label>Media Item Builder Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__My_Team_Filter_Field_Set_Name__c</fullName>
        <inlineHelpText>Field Set on User object to add new filter fields to Manage Assignments page within My Team</inlineHelpText>
        <label>My Team Filter Field Set Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__My_Team_Hierarchy__c</fullName>
        <inlineHelpText>Determines which hierarchy to use for manager-employee relationship</inlineHelpText>
        <label>My Team Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Plan_Builder_Field_Set_Name__c</fullName>
        <label>Plan Builder Field Set Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Quiz_Builder_Field_Set_Name__c</fullName>
        <label>Quiz Builder Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Resize_To_Fit_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to resize to fit background images used across the app</inlineHelpText>
        <label>Resize To Fit Images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Resource_Builder_Field_Set_Name__c</fullName>
        <label>Resource Builder Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Rich_Text_Builder_Field_Set_Name__c</fullName>
        <label>Rich Text Builder Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Show_SF_Header_In_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to display the SF Header in mobile devices</inlineHelpText>
        <label>Show SF Header in Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Show_Salesforce_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to show the Salesforce header for the end-user training pages</inlineHelpText>
        <label>Show Salesforce Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Task_Builder_Field_Set_Name__c</fullName>
        <label>Task Builder Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Track_Learning_Object_Launch_Attempts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to track launch attempts everytime a learning object is launched</inlineHelpText>
        <label>Track Learning Object Launch Attempts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Payment_URL__c</fullName>
        <inlineHelpText>URL for processing payments for payment-enabled Learning Plans</inlineHelpText>
        <label>Training Payment URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Video_Components_Namespace__c</fullName>
        <inlineHelpText>Namespace used for loading video components</inlineHelpText>
        <label>Video Components Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>LMS Settings</label>
</CustomObject>